# odoo-deployer

./: .env  .gitignore  .pre-commit-config.yaml  README.md  env-sample  ife-deployer.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
ife_deployer/: __init__.py
ife_deployer/lib/: addons.py  git_handler.py  odoo_client.py
lib/: addons.py  odoo14_modules.txt  odoo15_modules.txt
odoo_deployer/: __init__.py
odoo_deployer/lib/: yaml_handler.py
